; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/duck/orion/v3/extr_v3.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/duck/orion/v3/extr_v3.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@USB_LED_NUM_LOCK = common dso_local global i32 0, align 4
@layer_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [8 x i32], align 16
  store i32 %0, i32* %2, align 4
  %4 = getelementptr inbounds [8 x i32], [8 x i32]* %3, i64 0, i64 0
  %5 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %6 = call i32 @IS_HOST_LED_ON(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = getelementptr inbounds i32, i32* %4, i64 1
  %8 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %9 = call i32 @IS_HOST_LED_ON(i32 %8)
  store i32 %9, i32* %7, align 4
  %10 = getelementptr inbounds i32, i32* %7, i64 1
  %11 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %12 = call i32 @IS_HOST_LED_ON(i32 %11)
  store i32 %12, i32* %10, align 4
  %13 = getelementptr inbounds i32, i32* %10, i64 1
  %14 = load i32, i32* @layer_state, align 4
  %15 = and i32 %14, 4
  store i32 %15, i32* %13, align 4
  %16 = getelementptr inbounds i32, i32* %13, i64 1
  %17 = load i32, i32* @layer_state, align 4
  %18 = and i32 %17, 2
  store i32 %18, i32* %16, align 4
  %19 = getelementptr inbounds i32, i32* %16, i64 1
  %20 = load i32, i32* @layer_state, align 4
  %21 = and i32 %20, 1
  %22 = icmp ne i32 %21, 0
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i32 0, i32 1
  store i32 %24, i32* %19, align 4
  %25 = getelementptr inbounds i32, i32* %19, i64 1
  %26 = load i32, i32* @layer_state, align 4
  %27 = and i32 %26, 32
  store i32 %27, i32* %25, align 4
  %28 = getelementptr inbounds i32, i32* %25, i64 1
  %29 = load i32, i32* @layer_state, align 4
  %30 = and i32 %29, 16
  store i32 %30, i32* %28, align 4
  %31 = getelementptr inbounds [8 x i32], [8 x i32]* %3, i64 0, i64 0
  %32 = call i32 @indicator_leds_set(i32* %31)
  ret void
}

declare dso_local i32 @IS_HOST_LED_ON(i32) #1

declare dso_local i32 @indicator_leds_set(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
